--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-Templates and Media Files 47
+{% load staticfiles %} <!-- New line -->
 <html>
-<head><title>Rango</title>
-</head>
+<head>
+    <title>Rango</title></head>
 <body>
 <h1>Rango says...</h1>
 <div>
     hey there partner! <br/>
-    <strong>{{ boldmessage }}</strong><br/></div>
+    <strong>{{ boldmessage }}</strong><br/>
+</div>
 <div>
-    <a href="/rango/about/">About</a><br/>
+    <a href="/rango/about/">About</a><br/> <img src="{% static 'images/rango.jpg' %}"
 </div>
 </body>
 </html>
