--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 {% load staticfiles %} <!-- New line -->
 <html>
-<header>
+<head>
+    <title>Rango</title></head>
+<body>
+<h1>Rango says...</h1>
+<div>
+    Rango says here is the about page. <a href='/rango/'>Index</a>
+</div>
 
-</header>
+<div>
+    This tutorial has been put together by {{ myname }}
+</div>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango">
+
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat.">
+
+</body>
 </html>
