passed all test cases in test for chapter 4 add ' /' to the img tag

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,9 +12,10 @@
 <div>
     This tutorial has been put together by {{ myname }}
 </div>
-<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango">
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+<a href=\"/rango/about/\">About</a><br />"
 
-<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat.">
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
 
 </body>
 </html>
