--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -18,6 +18,7 @@
     {% endif %}
 </div>
 <a href="/rango/">Index</a><br/>
+<a href="/rango/category/{{ category.slug }}/add_page/">Add a New Page</a><br/>
 </body>
 
 </html>
