--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,11 +1,16 @@
 <!DOCTYPEhtml>
-<html>
-<head>
-    <title>Rango</title></head>
-<body>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add a Category
+{% endblock %}
+
+{% block body_block %}
 <h1>Add a Category</h1>
 <div>
-    <form id="category_form" method="post" action="/rango/add_category/"> {% csrf_token %}
+    <form id="category_form" method="post" action="/rango/add_category/">
+        {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
         {% endfor %}
@@ -17,5 +22,4 @@
         <input type="submit" name="submit" value="Create Category" />
     </form>
 </div>
-</body>
-</html>
+{% endblock %}
