--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPEhtml>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-<head>
-    <title>Rango</title>
-</head>
+{% block title_block %}
+    Index
+{% endblock %}
 
-<body>
-    <h1>Rango says...</h1>
+{% block body_block %}
+        <h1>Rango says...</h1>
     <div>
         hey there partner! <br/>
         <strong>{{ boldmessage }}</strong>
@@ -52,6 +52,4 @@
         <img src="{% static "images/rango.jpg" %}"
              alt="Picture of Rango" />
     </div>
-    </body>
-
-</html>
+{% endblock %}
