Chapter 8 completed Passed all test cases (rango) ➜  tango_with_django_project git:(master) ✗ python manage.py test rango.tests_chapter8 Creating test database for alias 'default'... System check identified no issues (0 silenced). ...- Python: Official Python Tutorial - Python: How to Think like a Computer Scientist - Python: Learn Python in 10 Minutes - Django: Official Django Tutorial - Django: Django Rocks - Django: How to Tango with Django - Other Frameworks: Bottle - Other Frameworks: Flask Flask 8 Bottle 7 How to Tango with Django 6 Django Rocks 5 Official Django Tutorial 4 .- Python: Official Python Tutorial - Python: How to Think like a Computer Scientist - Python: Learn Python in 10 Minutes - Django: Official Django Tutorial - Django: Django Rocks - Django: How to Tango with Django - Other Frameworks: Bottle - Other Frameworks: Flask Flask 8 Bottle 7 How to Tango with Django 6 Django Rocks 5 Official Django Tutorial 4 . ---------------------------------------------------------------------- Ran 5 tests in 0.090s
OK
Destroying test database for alias 'default'...

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,7 +10,7 @@
 {% block body_block %}
     <h1>Rango says...</h1>
 <div>
-    Rango says here is the about page. <a href='/rango/'>Index</a>
+    Rango says here is the about page.
 </div>
 
 <div>
