--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -3,13 +3,15 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Add Pages
+    Add a Page
 {% endblock %}
 
 {% block body_block %}
     <h1>Add a Page to {{ category.name }}</h1>
 <div>
-    <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/"> {% csrf_token %}
+    <form id="page_form" method="post" action={% url 'rango:add_page' category.slug %}>
+
+        {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
         {% endfor %}
