--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-
+{% load rango_template_tags %}
 
 <html>
 <head lang="en">
@@ -13,17 +13,22 @@
     </title>
 </head>
 <body>
-    <div>
+<div>
     {% block body_block %}
     {% endblock %}
-    </div>
-    <hr/>
-    <div>
-        <ul>
-            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
-            <li><a href="{% url 'rango:about' %}">About</a></li>
-            <li><a href="{% url 'rango:index' %}">Index</a></li>
-        </ul>
-    </div>
+</div>
+<div>
+    {% block sidebar_block %}
+        {% get_category_list category %}
+    {% endblock %}
+</div>
+<hr/>
+<div>
+    <ul>
+        <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+        <li><a href="{% url 'rango:about' %}">About</a></li>
+        <li><a href="{% url 'rango:index' %}">Index</a></li>
+    </ul>
+</div>
 </body>
 </html>
