--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPEhtml>
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 {% block title_block %}
@@ -11,6 +12,6 @@
         <br/>
         Password: <input type="password" name="password" value="" size="50"/>
         <br/>
-        <input type="submit" value="submit"/>
+        <input type="submit" value="submit" />
     </form>
 {% endblock %}
