--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPEhtml>
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 {% block title_block %} Register
@@ -5,21 +6,17 @@
 {% block body_block %}
     <h1>Register for Rango</h1>
     {% if registered %}
-        Rango says:
-        <strong>thank you for registering!</strong>
-        <a href="{% url 'rango:index' %}">
-            Return to the homepage.</a>
-        <br/>
+        Rango says: <strong>thank you for registering!</strong>
+        <a href="{% url 'rango:index' %}">Return to the homepage.</a>
     {% else %}
-        Rango says:
-        <strong>
-            register here!
-        </strong><br/>
+        Rango says: <strong>register here!</strong>
+        <br/>
         <form id="user_form" method="post" action="{% url 'rango:register' %}"
-              enctype="multipart/form-data"> {% csrf_token %}
-            <!-- Display each form -->
+              enctype="multipart/form-data">
+            {% csrf_token %}
             {{ user_form.as_p }}
             {{ profile_form.as_p }}
-            <!-- Provide a button to click to submit the form. -->
-            <input type="submit" name="submit" value="Register"/></form>
-    {% endif %} {% endblock %}
+            <input type="submit" name="submit" value="Register" />
+        </form>
+    {% endif %}
+{% endblock %}
