Chapter 10 complete Passed All test cases (rango) ➜  tango_with_django_project git:(master) ✗ python manage.py test rango.tests_chapter10 Creating test database for alias 'default'... System check identified no issues (0 silenced). ...GET AnonymousUser ..GET AnonymousUser . ---------------------------------------------------------------------- Ran 6 tests in 0.098s
OK
Destroying test database for alias 'default'...

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,6 +15,7 @@
 
 <div>
     This tutorial has been put together by {{ myname }}
+    <p>Visits: {{ visits }}</p>
 </div>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
